--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sass": "^2.1.30",
     "gatsby-plugin-sharp": "^2.4.3",
+    "gatsby-plugin-typography": "^2.4.1",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-source-graphql": "^2.2.1",
     "gatsby-transformer-sharp": "^2.3.13",
@@ -19,7 +20,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-typography": "^0.16.19",
+    "typography": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
