CMS problem fixed.

--- a/cms/strapiCMS/api/article/models/Article.settings.json
+++ b/cms/strapiCMS/api/article/models/Article.settings.json
@@ -18,15 +18,12 @@
       "type": "string"
     },
     "content": {
+      "minLength": 8,
+      "required": true,
       "type": "text"
     },
-    "image": {
-      "model": "file",
-      "via": "related",
-      "plugin": "upload"
-    },
     "date": {
-      "default": "a",
+      "required": true,
       "type": "date"
     },
     "author": {
