--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1",
+    "react-markdown": "^4.3.1",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19"
   },
