--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-source-strapi": "0.0.11",
     "gatsby-transformer-sharp": "^2.3.13",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.28",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1",
     "react-markdown": "^4.3.1",
+    "react-moment": "^0.9.7",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19"
   },
