--- a/cms/strapiCMS/api/article/models/Article.settings.json
+++ b/cms/strapiCMS/api/article/models/Article.settings.json
@@ -22,6 +22,11 @@
       "required": true,
       "type": "text"
     },
+    "excerpt": {
+      "minLength": 8,
+      "required": true,
+      "type": "text"
+    },
     "date": {
       "required": true,
       "type": "date"
