Category template added.

--- a/cms/strapiCMS/api/article/models/Article.settings.json
+++ b/cms/strapiCMS/api/article/models/Article.settings.json
@@ -35,6 +35,10 @@
       "model": "user",
       "via": "articles",
       "plugin": "users-permissions"
+    },
+    "category": {
+      "model": "category",
+      "via": "articles"
     }
   }
 }
