Slugs for article-, author- and category-pages created. Plus styles.

--- a/cms/strapiCMS/api/article/models/Article.settings.json
+++ b/cms/strapiCMS/api/article/models/Article.settings.json
@@ -39,6 +39,10 @@
     "category": {
       "model": "category",
       "via": "articles"
+    },
+    "slug": {
+      "unique": true,
+      "type": "string"
     }
   }
 }
