--- a/cms/strapiCMS/api/category/models/Category.settings.json
+++ b/cms/strapiCMS/api/category/models/Category.settings.json
@@ -18,6 +18,10 @@
     "articles": {
       "collection": "article",
       "via": "category"
+    },
+    "slug": {
+      "unique": true,
+      "type": "string"
     }
   }
 }
