--- a/cms/strapiCMS/plugins/users-permissions/models/User.settings.json
+++ b/cms/strapiCMS/plugins/users-permissions/models/User.settings.json
@@ -52,6 +52,10 @@
     "articles": {
       "collection": "article",
       "via": "author"
+    },
+    "slug": {
+      "unique": true,
+      "type": "string"
     }
   },
   "collectionName": "users-permissions_user"
